--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,9 +1,6 @@
 {
   "recentlyAdded": "أضيف مؤخرا",
   "favorites": "المفضلة",
-  "events": "الأحداث",
-  "memories": "ذكريات",
-  "journey": "رحلة",
   "search": "بحث...",
   "upload": "تحميل",
   "logout": "تسجيل خروج",
@@ -53,14 +50,9 @@
   "noDateSet": "لم يتم تعيين تاريخ.",
   "details": "التفاصيل",
   "analyzeForFaces": "تحليل الوجوه",
-  "event": "حدث",
-  "selectOrCreateEvent": "اختر أو أنشئ حدثًا...",
-  "noEventAssigned": "لم يتم تعيين حدث.",
   "noTitle": "لا يوجد عنوان متاح.",
   "processing": "جاري المعالجة...",
   "noDocumentsFound": "لم يتم العثور على مستندات تطابق معاييرك.",
-  "memoriesFromPast": "في مثل هذا الشهر في الماضي...",
-  "noMemoriesFound": "لم يتم العثور على ذكريات لهذا الشهر.",
   "loginTitle": "تسجيل الدخول إلى وسائط EDMS",
   "username": "اسم المستخدم",
   "password": "كلمة المرور",
@@ -68,12 +60,16 @@
   "loggingIn": "جاري تسجيل الدخول...",
   "loading": "جاري التحميل...",
   "matchCondition": "حالة المطابقة",
-  "noJourney": "لا توجد رحلة",
-  "loadingJourney": "جاري تحميل الرحلة...",
   "filterByTags": "تصفية حسب الوسوم",
   "clearAllTags": "مسح كافة الوسوم",
   "searchTags": "بحث في الوسوم",
   "LoadingTags": "جاري تحميل الوسوم.",
   "of": "من",
-  "aiDescription": "وصف الذكاء الاصطناعي"
+  "aiDescription": "وصف الذكاء الاصطناعي",
+  "backToFolders": "العودة إلى المجلدات",
+  "folders": "المجلدات",
+  "images": "صور",
+  "videos": "فيديوهات",
+  "files": "ملفات",
+  "openFolder": "فتح المجلد"
 }
