--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,6 @@
 {
   "recentlyAdded": "Recently Added",
   "favorites": "Favorites",
-  "events": "Events",
-  "memories": "Memories",
-  "journey": "Journey",
   "search": "Search...",
   "upload": "Upload",
   "logout": "Logout",
@@ -53,14 +50,9 @@
   "noDateSet": "No date set.",
   "details": "Details",
   "analyzeForFaces": "Analyze for Faces",
-  "event": "Event",
-  "selectOrCreateEvent": "Select or create an event...",
-  "noEventAssigned": "No event assigned.",
   "noTitle": "No title available.",
   "processing": "Processing...",
   "noDocumentsFound": "No documents found matching your criteria.",
-  "memoriesFromPast": "On this month in the past...",
-  "noMemoriesFound": "No memories found for this month.",
   "loginTitle": "EDMS Media Login",
   "username": "Username",
   "password": "Password",
@@ -68,12 +60,16 @@
   "loggingIn": "Logging in...",
   "loading": "Loading...",
   "matchCondition": "Match condition",
-  "noJourney": "No journey data available",
-  "loadingJourney": "Loading Journey...",
   "filterByTags": "Filter by Tags",
   "clearAllTags": "Clear All Tags",
   "searchTags": "Search Tags",
   "LoadingTags": "Loading tags",
   "of": "of",
-  "aiDescription": "AI Description"
+  "aiDescription": "AI Description",
+  "backToFolders": "Back to Folders",
+  "folders": "Folders",
+  "images": "Images",
+  "videos": "Videos",
+  "files": "Files",
+  "openFolder": "Open Folder"
 }
