--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,75 +1,98 @@
 {
-  "recentlyAdded": "أضيف مؤخرا",
+  "recentlyAdded": "المضافة مؤخرا",
   "favorites": "المفضلة",
   "search": "بحث...",
   "upload": "تحميل",
-  "logout": "تسجيل خروج",
+  "logout": "تسجيل الخروج",
   "tags": "الوسوم",
   "years": "السنوات",
-  "filters": "عوامل التصفية",
-  "clearFilters": "مسح الفلاتر",
+  "filters": "تصفية",
+  "clearFilters": "مسح التصفيات",
   "next": "التالي",
   "prev": "السابق",
   "first": "الأول",
   "last": "الأخير",
   "page": "صفحة",
-  "advancedFilters": "عوامل تصفية متقدمة",
+  "advancedFilters": "تصفية متقدمة",
   "dateRange": "نطاق التاريخ",
   "from": "من",
   "to": "إلى",
   "person": "شخص",
-  "searchForPerson": "ابحث عن شخص...",
+  "searchForPerson": "بحث عن شخص...",
   "apply": "تطبيق",
   "clearDates": "مسح التواريخ",
-  "clearAll": "مسح الكل",
   "clearAllYears": "مسح كل السنوات",
+  "clearAll": "مسح الكل",
   "loadingTags": "جاري تحميل الوسوم...",
   "noTagsAvailable": "لا توجد وسوم متاحة.",
   "noTagsMatch": "لا توجد وسوم تطابق '{searchTerm}'.",
   "noTagsYet": "لا توجد وسوم بعد.",
   "noTagsAssigned": "لا توجد وسوم معينة.",
-  "addOrSearchTag": "أضف أو ابحث عن وسم...",
-  "uploadDocuments": "تحميل المستندات",
-  "dragAndDrop": "اسحب وأفلت الملفات هنا",
+  "addOrSearchTag": "إضافة أو بحث عن وسم...",
+  "uploadDocuments": "تحميل مستندات",
+  "dragAndDrop": "سحب وإفلات الملفات هنا",
   "or": "أو",
   "browseFiles": "تصفح الملفات",
-  "uploadQueue": "قائمة انتظار التحميل",
+  "uploadQueue": "قائمة التحميل",
   "selectFilesToBegin": "اختر ملفات للبدء.",
   "uploading": "جاري التحميل...",
-  "uploadPending": "تحميل معلق",
-  "analyzeWithAI": "تحليل بالذكاء الاصطناعي",
+  "uploadPending": "في انتظار التحميل",
+  "analyzeWithAI": "تحليل باستخدام الذكاء الاصطناعي",
   "close": "إغلاق",
   "dateTaken": "تاريخ الالتقاط",
-  "selectDate": "اختر التاريخ",
+  "selectDate": "اختر تاريخ",
   "enterFileName": "أدخل اسم الملف",
-  "abstract": "نبذة",
+  "abstract": "ملخص",
   "save": "حفظ",
   "cancel": "إلغاء",
   "edit": "تعديل",
-  "noAbstract": "لا توجد نبذة متاحة.",
-  "noDateSet": "لم يتم تعيين تاريخ.",
+  "noAbstract": "لا يوجد ملخص متاح.",
+  "noDateSet": "لم يتم تحديد تاريخ.",
   "details": "التفاصيل",
   "analyzeForFaces": "تحليل الوجوه",
   "noTitle": "لا يوجد عنوان متاح.",
   "processing": "جاري المعالجة...",
   "noDocumentsFound": "لم يتم العثور على مستندات تطابق معاييرك.",
-  "loginTitle": "تسجيل الدخول إلى وسائط EDMS",
+  "loginTitle": "تسجيل دخول الوسائط الذكية",
   "username": "اسم المستخدم",
   "password": "كلمة المرور",
   "login": "تسجيل الدخول",
   "loggingIn": "جاري تسجيل الدخول...",
   "loading": "جاري التحميل...",
-  "matchCondition": "حالة المطابقة",
+  "matchCondition": "شرط المطابقة",
   "filterByTags": "تصفية حسب الوسوم",
-  "clearAllTags": "مسح كافة الوسوم",
+  "clearAllTags": "مسح كل الوسوم",
   "searchTags": "بحث في الوسوم",
-  "LoadingTags": "جاري تحميل الوسوم.",
+  "LoadingTags": "جاري تحميل الوسوم",
   "of": "من",
   "aiDescription": "وصف الذكاء الاصطناعي",
   "backToFolders": "العودة إلى المجلدات",
   "folders": "المجلدات",
-  "images": "صور",
-  "videos": "فيديوهات",
-  "files": "ملفات",
-  "openFolder": "فتح المجلد"
+  "images": "الصور",
+  "videos": "الفيديوهات",
+  "files": "الملفات",
+  "openFolder": "فتح المجلد",
+  "createFolder": "إنشاء مجلد",
+  "folderName": "اسم المجلد",
+  "enterFolderName": "مثال: مستندات المشروع",
+  "folderDescription": "الوصف",
+  "enterFolderDescription": "وصف اختياري لهذا المجلد",
+  "create": "إنشاء",
+  "folderCreated": "تم إنشاء المجلد بنجاح",
+  "errorCreatingFolder": "فشل إنشاء المجلد",
+  "parentFolderId": "معرف المجلد الرئيسي",
+  "leaveEmptyForRoot": "اتركه فارغًا لإنشاء مجلد جذري",
+  "enterParentIdPlaceholder": "مثال: 18515580",
+  "emptyFolder": "هذا المجلد فارغ.",
+  "home": "الرئيسية",
+  "refresh": "تحديث",
+  "createSubfolder": "إنشاء مجلد فرعي",
+  "rename": "إعادة تسمية",
+  "delete": "حذف",
+  "enterNewName": "أدخل الاسم الجديد:",
+  "confirmDelete": "هل أنت متأكد أنك تريد الحذف؟",
+  "errorRenaming": "فشل إعادة التسمية",
+  "errorDeleting": "فشل في الحذف",
+  "folderReferencedWarning": "هذا المجلد مرتبط بعناصر أخرى. هل تريد حذفه قسرًا (إلغاء الارتباط والحذف)؟"
+
 }
