--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -71,5 +71,28 @@
   "images": "Images",
   "videos": "Videos",
   "files": "Files",
-  "openFolder": "Open Folder"
+  "openFolder": "Open Folder",
+  "createFolder": "Create Folder",
+  "folderName": "Folder Name",
+  "enterFolderName": "e.g. Project Documents",
+  "folderDescription": "Description",
+  "enterFolderDescription": "Optional description for this folder",
+  "create": "Create",
+  "folderCreated": "Folder created successfully",
+  "errorCreatingFolder": "Failed to create folder",
+  "parentFolderId": "Parent Folder ID",
+  "leaveEmptyForRoot": "Leave empty to create a Root Folder",
+  "enterParentIdPlaceholder": "e.g. 18515580",
+  "emptyFolder": "This folder is empty.",
+  "home": "Home",
+  "refresh": "Refresh",
+  "createSubfolder": "Create Subfolder",
+  "rename": "Rename",
+  "delete": "Delete",
+  "enterNewName": "Enter new name:",
+  "confirmDelete": "Are you sure you want to delete",
+  "errorRenaming": "Failed to rename item",
+  "errorDeleting": "Failed to delete item",
+  "folderReferencedWarning": "This folder is referenced by other items. Do you want to force delete it (unlink and delete)?"
+
 }
