icons on first page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -93,6 +93,6 @@
   "confirmDelete": "هل أنت متأكد أنك تريد الحذف؟",
   "errorRenaming": "فشل إعادة التسمية",
   "errorDeleting": "فشل في الحذف",
-  "folderReferencedWarning": "هذا المجلد مرتبط بعناصر أخرى. هل تريد حذفه قسرًا (إلغاء الارتباط والحذف)؟"
-
+  "folderReferencedWarning": "هذا المجلد مرتبط بعناصر أخرى. هل تريد حذفه قسرًا (إلغاء الارتباط والحذف)؟",
+  "folderActions": "الإجراءات"
 }
