changes for deletion

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -109,5 +109,9 @@
   "savePermissions": "حفظ الصلاحيات",
   "add": "إضافة",
   "user": "المستخدم",
-  "remove": "إزالة"
+  "remove": "إزالة",
+  "referencedItemError": "لا يمكن حذف هذا العنصر لأنه مرتبط حاليًا بسجلات أخرى في النظام. قد يؤدي حذفه إلى تعارض في البيانات.",
+  "confirmForceDelete": "هل أنت متأكد أنك تريد الحذف القسري لهذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه.",
+  "yesDelete": "نعم، احذف",
+  "warning": "تحذير"
 }
