added new words to translation

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -91,6 +91,8 @@
   "delete": "حذف",
   "enterNewName": "أدخل الاسم الجديد:",
   "confirmDelete": "هل أنت متأكد أنك تريد الحذف؟",
+  "successRenaming": "تمت إعادة التسمية بنجاح",
+  "successDeleting": "تم الحذف بنجاح",
   "errorRenaming": "فشل إعادة التسمية",
   "errorDeleting": "فشل في الحذف",
   "folderReferencedWarning": "هذا المجلد مرتبط بعناصر أخرى. هل تريد حذفه قسرًا (إلغاء الارتباط والحذف)؟",
@@ -113,5 +115,30 @@
   "referencedItemError": "لا يمكن حذف هذا العنصر لأنه مرتبط حاليًا بسجلات أخرى في النظام. قد يؤدي حذفه إلى تعارض في البيانات.",
   "confirmForceDelete": "هل أنت متأكد أنك تريد الحذف القسري لهذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه.",
   "yesDelete": "نعم، احذف",
-  "warning": "تحذير"
+  "warning": "تحذير", 
+  "FailLoadingFolders" : "فشل تحميل محتويات المجلد",
+  "AddedToFavorites": "تمت الإضافة إلى المفضلة",
+  "ThumbnailCacheCleared": "تم مسح ذاكرة التخزين المؤقت للصور المصغرة بنجاح",
+  "FailedToClearCache": "فشل في مسح ذاكرة التخزين المؤقت",
+  "FailedToUpdateFavoriteStatus": "فشل في تحديث حالة المفضلة",
+  "LogoutFailed": "فشل تسجيل الخروج. يرجى المحاولة مرة أخرى.",
+  "ErrorLogout": "حدث خطأ أثناء تسجيل الخروج",
+  "NameForFace": "يرجى إدخال اسم لهذا الوجه أولاً",
+  "SuccessfullySaved": "تم الحفظ بنجاح",
+  "toTheKnownFacesDatabase.": "إلى قاعدة بيانات الوجوه المعروفة",
+  "error": "خطأ",
+  "errorOccurred": "حدث خطأ. يرجى المحاولة مرة أخرى",
+  "noConfirmedNames": "لا توجد أسماء مؤكدة للتحديث",
+  "titleUpdatedSuccessfully": "تم تحديث العنوان بنجاح",
+  "permissionsUpdated": "تم تحديث الصلاحيات بنجاح",
+  "failedToUpdatePermissions": "فشل في تحديث الصلاحيات",
+  "errorAddingTag": "خطأ في إضافة الوسم",
+  "errorDeletingTag": "خطأ في حذف الوسم",
+  "failedUpdateShortlist": "فشل في تحديث حالة القائمة المختصرة",
+  "SuccessfullyUploaded" : "تم التحميل بنجاح",
+  "file(s)" : "ملفات",
+  "uploadCompletedWith" : "اكتمل التحميل مع",
+  "error(s)" : "أخطاء",
+  "AllUploadsFailed": "فشل جميع التحميلات. يرجى التحقق من الأخطاء.",
+  "loginFailed": "فشل تسجيل الدخول"
 }
