--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,6 +91,8 @@
   "delete": "Delete",
   "enterNewName": "Enter new name:",
   "confirmDelete": "Are you sure you want to delete",
+  "successRenaming": "Renamed successfully",
+  "successDeleting": "Item deleted successfully",
   "errorRenaming": "Failed to rename item",
   "errorDeleting": "Failed to delete item",
   "folderReferencedWarning": "This folder is referenced by other items. Do you want to force delete it (unlink and delete)?",
@@ -113,5 +115,30 @@
   "referencedItemError": "This item cannot be deleted because it is currently linked to other records in the system. Deleting it may cause data inconsistency.",
   "confirmForceDelete": "Do you want to delete it anyway? This will remove all contents and references.",
   "yesDelete": "Yes, Delete",
-  "warning": "Warning"
+  "warning": "Warning", 
+  "FailLoadingFolders": "Failed to load folder contents",
+  "AddedToFavorites": "Added to favorites",
+  "ThumbnailCacheCleared": "Thumbnail cache cleared successfully",
+  "FailedToClearCache": "Failed to clear cache",
+  "FailedToUpdateFavoriteStatus": "Failed to update favorite status",
+  "LogoutFailed": "Logout failed. Please try again.",
+  "ErrorLogout": "An error occurred during logout",
+  "NameForFace": "Please enter a name for this face first",
+  "SuccessfullySaved": "Successfully saved",
+  "toTheKnownFacesDatabase.": "to the known faces database",
+  "error": "Error",
+  "errorOccurred": "An error occurred. Please try again",
+  "noConfirmedNames": "No confirmed names to update",
+  "titleUpdatedSuccessfully": "Title updated successfully",
+  "permissionsUpdated": "Permissions updated successfully",
+  "failedToUpdatePermissions": "Failed to update permissions",
+  "errorAddingTag": "Error adding tag",
+  "errorDeletingTag": "Error deleting tag",
+  "failedUpdateShortlist": "Failed to update shortlist status",
+  "SuccessfullyUploaded" : "Successfully uploaded",
+  "file(s)" : "file(s)",
+  "uploadCompletedWith" : "Upload completed with",
+  "error(s)" : "error(s)",
+  "uploadsFailed" : "All uploads failed. Please check errors",
+  "loginFailed" : "Login failed"
 }
