--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -140,5 +140,6 @@
   "uploadCompletedWith" : "اكتمل التحميل مع",
   "error(s)" : "أخطاء",
   "AllUploadsFailed": "فشل جميع التحميلات. يرجى التحقق من الأخطاء.",
-  "loginFailed": "فشل تسجيل الدخول"
+  "loginFailed": "فشل تسجيل الدخول",
+  "items": "ملفًا"
 }
