sharing document feature

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -141,5 +141,6 @@
   "error(s)" : "أخطاء",
   "AllUploadsFailed": "فشل جميع التحميلات. يرجى التحقق من الأخطاء.",
   "loginFailed": "فشل تسجيل الدخول",
-  "items": "ملفًا"
+  "items": "ملفًا",
+  "share": "مشاركة"
 }
