--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -159,5 +159,6 @@
   "DownloadFunctionality": "سيتم ربط خاصية التحميل بتدفق الوسائط",
   "FailedRequestOtp": "فشل طلب رمز التحقق",
   "FailedVerifyOtp": "فشل التحقق من الرمز",
-  "LinkCopied": "تم نسخ الرابط إلى الحافظة!"
+  "LinkCopied": "تم نسخ الرابط إلى الحافظة!",
+  "PreviewNotAvailable": "المعاينة غير متاحة لهذا النوع من الملفات"
 }
