share email new template

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -160,5 +160,35 @@
   "FailedRequestOtp": "فشل طلب رمز التحقق",
   "FailedVerifyOtp": "فشل التحقق من الرمز",
   "LinkCopied": "تم نسخ الرابط إلى الحافظة!",
-  "PreviewNotAvailable": "المعاينة غير متاحة لهذا النوع من الملفات"
+  "PreviewNotAvailable": "المعاينة غير متاحة لهذا النوع من الملفات",
+  "shareMode": "وضع المشاركة",
+  "openAccess": "وصول مفتوح",
+  "openAccessDesc": "يمكن لأي بريد إلكتروني rta.ae الوصول",
+  "restrictedAccess": "وصول مقيد",
+  "restrictedAccessDesc": "يمكن لشخص معين فقط الوصول",
+  "recipientEmail": "البريد الإلكتروني للمستلم",
+  "targetEmailRequired": "البريد الإلكتروني المستهدف مطلوب للمشاركة المقيدة",
+  "invalidTargetEmail": "يجب أن يكون البريد الإلكتروني من نطاق rta.ae",
+  "targetEmailHint": "يُسمح فقط بالبريد الإلكتروني الذي ينتهي بـ rta.ae",
+  "restrictedLinkInfo": "يمكن الوصول إلى هذا الرابط فقط بواسطة",
+  "openLinkInfo": "يمكن لأي بريد إلكتروني rta.ae الوصول إلى هذا الرابط",
+  "restrictedMode": "وصول مقيد",
+  "openMode": "وصول مفتوح",
+  "restrictedLink": "وصول مقيد",
+  "restrictedLinkDesc": "يمكن الوصول إلى هذا الرابط فقط بواسطة:",
+  "enterRestrictedEmail": "أدخل بريدك الإلكتروني للتحقق من الوصول",
+  "rtaEmailOnly": "يُسمح فقط ببريد إلكتروني rta.ae",
+  "linkInvalid": "الرابط غير صالح",
+  "linkExpired": "هذا الرابط غير صالح أو انتهت صلاحيته.",
+  "errorLoadingShare": "خطأ في تحميل معلومات المشاركة.",
+  "shareDocument": "مشاركة المستند",
+  "generateLink": "إنشاء رابط",
+  "expiryDate": "تاريخ الانتهاء",
+  "copyLink": "نسخ الرابط",
+  "shareDescription" : "إنشاء رابط آمن لمشاركة هذا الملف مع موظفين آخرين أو شركاء خارجيين. سيتم تسجيل الوصول.",
+  "generating" : "جاري الإنشاء...",
+  "restrictedTo" : "مقيد إلى",
+  "openAccessInfo": "يمكن لأي بريد إلكتروني rta.ae الوصول إلى هذا الرابط",
+  "anyRtaEmail": "أي بريد إلكتروني rta.ae",
+  "oneEmailOnly": "بريد إلكتروني واحد فقط"
 }
