--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -160,5 +160,36 @@
   "FailedRequestOtp": "Failed to request OTP",
   "FailedVerifyOtp": "Failed to verify OTP",
   "LinkCopied": "Link copied to clipboard!",
-  "PreviewNotAvailable": "Preview not available for this file type."
+  "PreviewNotAvailable": "Preview not available for this file type.",
+  "shareMode": "Sharing Mode",
+  "openAccess": "Open Access",
+  "openAccessDesc": "Any @rta.ae email can access",
+  "restrictedAccess": "Specific Person",
+  "restrictedAccessDesc": "Only one email can access",
+  "recipientEmail": "Recipient Email",
+  "targetEmailRequired": "Target email is required for restricted sharing",
+  "invalidTargetEmail": "Email must be from @rta.ae domain",
+  "targetEmailHint": "Only emails ending with @rta.ae are allowed",
+  "restrictedLinkInfo": "This link can only be accessed by",
+  "openLinkInfo": "This link can be accessed by any @rta.ae email",
+  "restrictedMode": "Restricted Access",
+  "openMode": "Open Access",
+  "restrictedLink": "Restricted Access",
+  "restrictedLinkDesc": "This link can only be accessed by:",
+  "enterRestrictedEmail": "Enter your email to verify access",
+  "rtaEmailOnly": "Only @rta.ae emails are allowed",
+  "linkInvalid": "Link Invalid",
+  "linkExpired": "This link is invalid or has expired.",
+  "errorLoadingShare": "Error loading share information.",
+  "shareDocument": "Share document",
+  "generateLink": "Generate link",
+  "expiryDate": "Expiry date",
+  "copyLink": "Copy link",
+  "shareDescription" : "Generate a secure link to share this file with other employees or external partners. Access will be logged.",
+  "generating" : "Generating...",
+  "restrictedTo" : "Restricted to",
+  "openAccessInfo": "This link can be accessed by any @rta.ae email",
+  "anyRtaEmail": "Any @rta.ae email",
+  "oneemailOnly": "Only one email allowed"
+
 }
