--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -198,5 +198,7 @@
   "folderShareNotice" : "جميع الملفات والمجلدات الفرعية داخل هذا المجلد ستكون قابلة للوصول عبر الرابط المشترك.",
   "shareFolderDescription": "شارك هذا المجلد وكل محتوياته مع الآخرين.",
   "folderShareCreated" : "تم إنشاء رابط مشاركة المجلد. يمكن للمستلمين تصفح كل المحتويات.",
-  "fileShareCreated": "تم إنشاء رابط مشاركة الملف."
+  "fileShareCreated": "تم إنشاء رابط مشاركة الملف.",
+  "restoringSession": "جارٍ استعادة جلستك...",
+  "OtpSentAutomatically": "تم إرسال رمز التحقق إلى بريدك الإلكتروني"
 }
