--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -119,8 +119,8 @@
   "referencedItemError": "لا يمكن حذف هذا العنصر لأنه مرتبط حاليًا بسجلات أخرى في النظام. قد يؤدي حذفه إلى تعارض في البيانات.",
   "confirmForceDelete": "هل أنت متأكد أنك تريد الحذف القسري لهذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه.",
   "yesDelete": "نعم، احذف",
-  "warning": "تحذير", 
-  "FailLoadingFolders" : "فشل تحميل محتويات المجلد",
+  "warning": "تحذير",
+  "FailLoadingFolders": "فشل تحميل محتويات المجلد",
   "AddedToFavorites": "تمت الإضافة إلى المفضلة",
   "ThumbnailCacheCleared": "تم مسح ذاكرة التخزين المؤقت للصور المصغرة بنجاح",
   "FailedToClearCache": "فشل في مسح ذاكرة التخزين المؤقت",
@@ -139,10 +139,10 @@
   "errorAddingTag": "خطأ في إضافة الوسم",
   "errorDeletingTag": "خطأ في حذف الوسم",
   "failedUpdateShortlist": "فشل في تحديث حالة القائمة المختصرة",
-  "SuccessfullyUploaded" : "تم التحميل بنجاح",
-  "file(s)" : "ملفات",
-  "uploadCompletedWith" : "اكتمل التحميل مع",
-  "error(s)" : "أخطاء",
+  "SuccessfullyUploaded": "تم التحميل بنجاح",
+  "file(s)": "ملفات",
+  "uploadCompletedWith": "اكتمل التحميل مع",
+  "error(s)": "أخطاء",
   "AllUploadsFailed": "فشل جميع التحميلات. يرجى التحقق من الأخطاء.",
   "loginFailed": "فشل تسجيل الدخول",
   "items": "ملفًا",
@@ -189,16 +189,17 @@
   "generateLink": "إنشاء رابط",
   "expiryDate": "تاريخ الانتهاء",
   "copyLink": "نسخ الرابط",
-  "shareDescription" : "إنشاء رابط آمن لمشاركة هذا الملف مع موظفين آخرين أو شركاء خارجيين. سيتم تسجيل الوصول.",
-  "generating" : "جاري الإنشاء...",
-  "restrictedTo" : "مقيد إلى",
+  "shareDescription": "إنشاء رابط آمن لمشاركة هذا الملف مع موظفين آخرين أو شركاء خارجيين. سيتم تسجيل الوصول.",
+  "generating": "جاري الإنشاء...",
+  "restrictedTo": "مقيد إلى",
   "openAccessInfo": "يمكن لأي بريد إلكتروني rta.ae الوصول إلى هذا الرابط",
   "anyRtaEmail": "أي بريد إلكتروني rta.ae",
   "oneEmailOnly": "بريد إلكتروني واحد فقط",
-  "folderShareNotice" : "جميع الملفات والمجلدات الفرعية داخل هذا المجلد ستكون قابلة للوصول عبر الرابط المشترك.",
+  "folderShareNotice": "جميع الملفات والمجلدات الفرعية داخل هذا المجلد ستكون قابلة للوصول عبر الرابط المشترك.",
   "shareFolderDescription": "شارك هذا المجلد وكل محتوياته مع الآخرين.",
-  "folderShareCreated" : "تم إنشاء رابط مشاركة المجلد. يمكن للمستلمين تصفح كل المحتويات.",
+  "folderShareCreated": "تم إنشاء رابط مشاركة المجلد. يمكن للمستلمين تصفح كل المحتويات.",
   "fileShareCreated": "تم إنشاء رابط مشاركة الملف.",
   "restoringSession": "جارٍ استعادة جلستك...",
-  "OtpSentAutomatically": "تم إرسال رمز التحقق إلى بريدك الإلكتروني"
+  "OtpSentAutomatically": "تم إرسال رمز التحقق إلى بريدك الإلكتروني",
+  "mediaType": "نوع الوسائط"
 }
