--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,7 +119,7 @@
   "referencedItemError": "This item cannot be deleted because it is currently linked to other records in the system. Deleting it may cause data inconsistency.",
   "confirmForceDelete": "Do you want to delete it anyway? This will remove all contents and references.",
   "yesDelete": "Yes, Delete",
-  "warning": "Warning", 
+  "warning": "Warning",
   "FailLoadingFolders": "Failed to load folder contents",
   "AddedToFavorites": "Added to favorites",
   "ThumbnailCacheCleared": "Thumbnail cache cleared successfully",
@@ -139,12 +139,12 @@
   "errorAddingTag": "Error adding tag",
   "errorDeletingTag": "Error deleting tag",
   "failedUpdateShortlist": "Failed to update shortlist status",
-  "SuccessfullyUploaded" : "Successfully uploaded",
-  "file(s)" : "file(s)",
-  "uploadCompletedWith" : "Upload completed with",
-  "error(s)" : "error(s)",
-  "uploadsFailed" : "All uploads failed. Please check errors",
-  "loginFailed" : "Login failed",
+  "SuccessfullyUploaded": "Successfully uploaded",
+  "file(s)": "file(s)",
+  "uploadCompletedWith": "Upload completed with",
+  "error(s)": "error(s)",
+  "uploadsFailed": "All uploads failed. Please check errors",
+  "loginFailed": "Login failed",
   "items": "Items",
   "share": "Share",
   "SecureDocAccess": "Secure Document Access",
@@ -189,18 +189,18 @@
   "generateLink": "Generate link",
   "expiryDate": "Expiry date",
   "copyLink": "Copy link",
-  "shareDescription" : "Generate a secure link to share this file with other employees or external partners. Access will be logged.",
-  "generating" : "Generating...",
-  "restrictedTo" : "Restricted to",
+  "shareDescription": "Generate a secure link to share this file with other employees or external partners. Access will be logged.",
+  "generating": "Generating...",
+  "restrictedTo": "Restricted to",
   "openAccessInfo": "This link can be accessed by any @rta.ae email",
   "anyRtaEmail": "Any @rta.ae email",
   "oneemailOnly": "Only one email allowed",
-  "folderShareNotice" : "All files and subfolders within this folder will be accessible via the shared link.",
+  "folderShareNotice": "All files and subfolders within this folder will be accessible via the shared link.",
   "oneEmailOnly": "Only one email allowed",
   "shareFolderDescription": "Share this folder and all its contents with others.",
-  "folderShareCreated" : "Folder share link created. Recipients can browse all contents.",
+  "folderShareCreated": "Folder share link created. Recipients can browse all contents.",
   "fileShareCreated": "File share link created.",
   "restoringSession": "Restoring your session...",
-  "OtpSentAutomatically": "Verification code sent to your email"
-
+  "OtpSentAutomatically": "Verification code sent to your email",
+  "mediaType": "Media Type"
 }
