changes for main portal

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -53,7 +53,7 @@
   "noTitle": "لا يوجد عنوان متاح.",
   "processing": "جاري المعالجة...",
   "noDocumentsFound": "لم يتم العثور على مستندات تطابق معاييرك.",
-  "loginTitle": "تسجيل دخول الوسائط الذكية",
+  "loginTitle": "تسجيل الدخول إلى نظام إدارة الوثائق الذكي",
   "username": "اسم المستخدم",
   "password": "كلمة المرور",
   "login": "تسجيل الدخول",
