--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,7 @@
   "noTitle": "No title available.",
   "processing": "Processing...",
   "noDocumentsFound": "No documents found matching your criteria.",
-  "loginTitle": "Smart Media Login",
+  "loginTitle": "Smart EDMS Login",
   "username": "Username",
   "password": "Password",
   "login": "Login",
