arabic landing page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -208,5 +208,15 @@
   "retry": "إعادة المحاولة",
   "goHome": "الذهاب للرئيسية",
   "downloadError": "فشل في تحميل الملف",
-  "Downloading": "جاري التحميل..."
+  "Downloading": "جاري التحميل...",
+  "edmsPortal": "بوابة نظام إدارة الوثائق",
+  "welcomeToEdms": "مرحباً بكم في بوابة نظام إدارة الوثائق",
+  "selectSystem": "اختر نظاماً أدناه للوصول إلى أدوات إدارة الوثائق الخاصة بك",
+  "smartEdmsTitle": "نظام إدارة الوثائق الذكي",
+  "smartEdmsDesc": "نظام إدارة وثائق إلكتروني مع تحليل مدعوم بالذكاء الاصطناعي لتنظيم الوثائق الرقمية والبحث فيها وإدارتها بكفاءة.",
+  "ptaEdmsTitle": "PTAEDMS",
+  "ptaEdmsDesc": "نظام إدارة الوثائق الإلكتروني الخاص بـ مؤسسة النقل العام للتعامل مع وثائق المؤسسة وإدارة سير العمل.",
+  "rightsReserved": "هيئة الطرق والمواصلات . جميع الحقوق محفوظة.",
+  "switchToDark": "التبديل إلى الوضع الداكن",
+  "switchToLight": "التبديل إلى الوضع الفاتح"
 }
