storage percentage feature

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -216,7 +216,7 @@
   "smartEdmsDesc": "نظام إدارة وثائق إلكتروني مع تحليل مدعوم بالذكاء الاصطناعي لتنظيم الوثائق الرقمية والبحث فيها وإدارتها بكفاءة.",
   "ptaEdmsTitle": "PTAEDMS",
   "ptaEdmsDesc": "نظام إدارة الوثائق الإلكتروني الخاص بـ مؤسسة النقل العام للتعامل مع وثائق المؤسسة وإدارة سير العمل.",
-  "rightsReserved": "هيئة الطرق والمواصلات . جميع الحقوق محفوظة.",
+  "rightsReserved": "هيئة الطرق والمواصلات . جميع الحقوق محفوظة",
   "switchToDark": "التبديل إلى الوضع الداكن",
   "switchToLight": "التبديل إلى الوضع الفاتح"
 }
