portal and dashboard changes

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -218,5 +218,6 @@
   "ptaEdmsDesc": "نظام إدارة الوثائق الإلكتروني الخاص بـ مؤسسة النقل العام للتعامل مع وثائق المؤسسة وإدارة سير العمل.",
   "rightsReserved": "هيئة الطرق والمواصلات . جميع الحقوق محفوظة",
   "switchToDark": "التبديل إلى الوضع الداكن",
-  "switchToLight": "التبديل إلى الوضع الفاتح"
+  "switchToLight": "التبديل إلى الوضع الفاتح",
+  "foldersDesc": "تصفح جميع ملفاتك ومجلداتك"
 }
