fixes for zip file and download and bundling

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -219,5 +219,6 @@
   "rightsReserved": "هيئة الطرق والمواصلات . جميع الحقوق محفوظة",
   "switchToDark": "التبديل إلى الوضع الداكن",
   "switchToLight": "التبديل إلى الوضع الفاتح",
-  "foldersDesc": "تصفح جميع ملفاتك ومجلداتك"
+  "foldersDesc": "تصفح جميع ملفاتك ومجلداتك",
+  "contentCannotBeDisplayed": "لا يمكن عرض المحتوى"
 }
