changes for sharing documents and login

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -220,5 +220,6 @@
   "switchToDark": "التبديل إلى الوضع الداكن",
   "switchToLight": "التبديل إلى الوضع الفاتح",
   "foldersDesc": "تصفح جميع ملفاتك ومجلداتك",
-  "contentCannotBeDisplayed": "لا يمكن عرض المحتوى"
+  "contentCannotBeDisplayed": "لا يمكن عرض المحتوى",
+  "LoadingDocument": "جاري تحميل المستند"
 }
