--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -221,5 +221,6 @@
   "switchToDark": "Switch to dark mode",
   "switchToLight": "Switch to light mode",
   "foldersDesc": "Browse all your files and folders",
-  "contentCannotBeDisplayed": "Content cannot be displayed"
+  "contentCannotBeDisplayed": "Content cannot be displayed",
+  "LoadingDocument": "Loading document"
 }
